--- a/dev_resources/todo.txt
+++ b/dev_resources/todo.txt
@@ -3,9 +3,13 @@
     - Create landing page, sign on page
 - Map out algorithm
     - What the end result tax refund is based on given information
+    - Only W2 and 1099 are required
 
 - ERD (entity relationship diagram)
     - Draw out ERD's based on propsoed algorithm
 
 - Check how to test Spring
     - Write tests for back end calculation
+
+
+-   
