login and create account

--- a/src/main/react/src/i18n/locales/en/translation.json
+++ b/src/main/react/src/i18n/locales/en/translation.json
@@ -2,8 +2,8 @@
   "title": "Clairvoyant Tax Prep",
   "profile": {
     "profile": "Profile",
-    "email": "email",
-    "password": "password",
+    "email": "Email",
+    "password": "Password",
     "address": "Address",
     "ssn": "Social security number",
     "telephone": "Telephone number",
