translations for taxes

--- a/src/main/react/src/i18n/locales/fr/translation.json
+++ b/src/main/react/src/i18n/locales/fr/translation.json
@@ -14,28 +14,80 @@
       "suffix": "Suffixe"
     }
   },
-  "income": "revenu",
   "login": "Login",
   "logout": "Se déconnecter",
   "create": "Créez votre compte maintenant",
   "needAccount": "Vous n'avez pas de compte ?",
   "user_one": "Utilisateur",
   "user_other": "Utilisateurs",
-  "loggedIn" : "L'$t(user_one) est connecté",
-  "loggedOut" : "L'$t(user_one) est déconnecté",
+  "loggedIn": "L'$t(user_one) est connecté",
+  "loggedOut": "L'$t(user_one) est déconnecté",
   "home": "Page d'accueil",
   "calculator": "Calculatrice",
   "account": "Mon compte",
   "Sign in": "Se connecter",
   "Show SSN": "Afficher le NSS",
   "Hide SSN": "Masquer le NSS",
-  "Show password" : "Montrer le mot de passe",
+  "Show password": "Montrer le mot de passe",
   "Hide password": "Masquer le mot de passe",
   "Change Password": "Changer le mot de passe",
   "Edit": "Modifier",
   "Submit": "Soumettre",
-  "Sign up" : "S'inscrire",
+  "Sign up": "S'inscrire",
   "Create account": "Créer un compte",
   "Re-type password": "Retaper le $t(profile.password)",
-  "indicates a required field": "indique un champ obligatoire"
+  "indicates a required field": "indique un champ obligatoire",
+  "W2": {
+    "Employer ID": "Numéro d'employeur",
+    "Employer information": "Renseignements sur l'employeur",
+    "Control number": "Numéro de contrôle",
+    "Income": "Revenu",
+    "Federal taxes withheld": "Impôts fédéraux retenus",
+    "Social Security wages": "Salaires de la Sécurité Sociale",
+    "Social Security tips": "Conseils de Sécurité Sociale",
+    "Social Security taxes withheld": "Impôts de Sécurité Sociale retenus",
+    "Medicare Wages": "Salaires de la Medicare",
+    "Medicare taxes withheld": "Impôts de Medicare",
+    "Allocated tips": "Pourboires attribués",
+    "Dependent care": "Soins aux personnes à charge",
+    "Nonqualified plans": "Régimes non admissibles",
+    "Deferrals": "Reports",
+    "Statutory employment": "Emploi statutaire",
+    "Retirement plan": "Régime de retraite",
+    "Third-party sick pay": "Indemnité de maladie d'un tiers",
+    "Other": "Autre"
+  },
+  "1099": {
+    "Payer information": "Informations sur le payeur",
+    "Payer's TIN": "NIF du payeur",
+    "Recipient's name": "Nom du destinataire",
+    "Recipient's address": "Adresse du destinataire",
+    "Recipient's location": "Localisation du destinataire",
+    "Recipient's TIN": "NIF du destinataire",
+    "Account number": "Numéro de compte",
+    "Rents": "Loyers",
+    "Royalties": "Redevance",
+    "Other income": "Autre revenu",
+    "Federal taxes withheld": "Impôts fédéraux retenus",
+    "Fishing boat proceeds": "Produit du bateau de pêche",
+    "Medical and healthcare payments": "Paiements médicaux et de soins de santé",
+    "Payer made direct sales totaling $5,000 or more of consumer products to recipient for resale": "Le payeur a réalisé des ventes directes totalisant $5.000 ou plus de produits de consommation au destinataire pour la revente",
+    "Substitute payments in lieu of dividends or interest": "Paiements de substitution en remplacement de dividendes ou d'intérêts",
+    "Crop insurance proceeds": "Produits de l'assurance récolte",
+    "Gross proceeds paid to an attorney": "Produit brut versé à un avocat",
+    "Fish purchased for resale": "Poisson acheté pour la revente",
+    "Section 409A deferrals": "Reports en vertu de l'article 409A",
+    "FATCA filing requirement": "Exigence de dépôt FATCA",
+    "Excess golden parachute payments": "Paiements excédentaires du parachute doré",
+    "Nonqualified deferred compensation": "Paiements excédentaires du parachute doré"
+  },
+  "TaxInfo":
+  {
+    "Supplemental income": "Revenu supplémentaire",
+    "Additional withholdings": "Retenues supplémentaires",
+    "Filing status": "Statut de dépôt",
+    "Dependents": "Personnes à charge",
+    "Student status": "Statut d'étudiant",
+    "Special deductions": "Déductions spéciales"
+  }
 }
