--- a/src/main/react/src/i18n/locales/en/translation.json
+++ b/src/main/react/src/i18n/locales/en/translation.json
@@ -26,5 +26,63 @@
   "loggedOut" : "$t(user_one) is logged out",
   "home": "Home",
   "calculator": "Calculator",
-  "account": "My account"
+  "account": "My account",
+  "W2": {
+    "Employer ID": "Employer ID",
+    "Employer information": "Employer information",
+    "Control number": "Control number",
+    "Income": "Income",
+    "Federal taxes withheld": "Federal taxes withheld",
+    "Social Security wages": "Social Security wages",
+    "Social Security tips": "Social Security tips",
+    "Social Security taxes withheld": "Social Security taxes withheld",
+    "Medicare Wages": "Medicare Wages",
+    "Medicare taxes withheld": "Medicare taxes withheld",
+    "Allocated tips": "Allocated tips",
+    "Dependent care": "Dependent care",
+    "Nonqualified plans": "Nonqualified plans",
+    "Deferrals": "Deferrals",
+    "Statutory employment": "Statutory employment",
+    "Retirement plan": "Retirement plan",
+    "Third-party sick pay": "Third-party sick pay",
+    "Other": "Other"
+  },
+  "1099": {
+    "Payer information": "Payer information",
+    "Payer's TIN": "Payer's TIN",
+    "Recipient's name": "Recipient's name",
+    "Recipient's address": "Recipient's address",
+    "Recipient's location": "Recipient's location",
+    "Recipient's TIN": "Recipient's TIN",
+    "Account number": "Account number",
+    "Rents": "Rents",
+    "Royalties": "Royalties",
+    "Other income": "Other income",
+    "Federal taxes withheld": "Federal taxes withheld",
+    "Fishing boat proceeds": "Fishing boat proceeds",
+    "Medical and healthcare payments": "Medical and healthcare payments",
+    "Payer made direct sales totaling $5,000 or more of consumer products to recipient for resale": "Payer made direct sales totaling $5,000 or more of consumer products to recipient for resale",
+    "Substitute payments in lieu of dividends or interest": "Substitute payments in lieu of dividends or interest",
+    "Crop insurance proceeds": "Crop insurance proceeds",
+    "Gross proceeds paid to an attorney": "Gross proceeds paid to an attorney",
+    "Fish purchased for resale": "Fish purchased for resale",
+    "Section 409A deferrals": "Section 409A deferrals",
+    "FATCA filing requirement": "FATCA filing requirement",
+    "Excess golden parachute payments": "Excess golden parachute payments",
+    "Nonqualified deferred compensation": "Nonqualified deferred compensation"
+  },
+  "TaxInfo":
+  {
+    "Supplemental income": "Supplemental income",
+    "Additional withholdings": "Additional withholdings",
+    "Filing status": "Filing status",
+    "Dependents": "Dependents",
+    "Student status": "Student status",
+    "Special deductions": "Special deductions",
+    "Special deduction": "Standard deductions",
+    "Single": "Single",
+    "Married filing jointly": "Married filing jointly",
+    "Married filing separately": "Married filing separately",
+    "Head of household": "Head of household"
+  }
 }
