--- a/src/main/react/src/i18n/locales/fr/translation.json
+++ b/src/main/react/src/i18n/locales/fr/translation.json
@@ -81,13 +81,17 @@
     "Excess golden parachute payments": "Paiements excédentaires du parachute doré",
     "Nonqualified deferred compensation": "Paiements excédentaires du parachute doré"
   },
-  "TaxInfo":
-  {
+  "TaxInfo": {
     "Supplemental income": "Revenu supplémentaire",
     "Additional withholdings": "Retenues supplémentaires",
     "Filing status": "Statut de dépôt",
     "Dependents": "Personnes à charge",
     "Student status": "Statut d'étudiant",
-    "Special deductions": "Déductions spéciales"
+    "Special deductions": "Déductions spéciales",
+    "Standard deduction": "Déduction forfaitaire",
+    "Single": "Célibataire",
+    "Married filing jointly": "Marié déclarant conjointement",
+    "Married filing separately": "Marié déclarant séparément",
+    "Head of household": "Chef de ménage"
   }
 }
