fixed misc forms

--- a/src/main/react/src/i18n/locales/en/translation.json
+++ b/src/main/react/src/i18n/locales/en/translation.json
@@ -79,7 +79,7 @@
     "Dependents": "Dependents",
     "Student status": "Student status",
     "Special deductions": "Special deductions",
-    "Special deduction": "Standard deductions",
+    "Standard deduction": "Standard deductions",
     "Single": "Single",
     "Married filing jointly": "Married filing jointly",
     "Married filing separately": "Married filing separately",
