--- a/src/main/react/src/i18n/locales/en/translation.json
+++ b/src/main/react/src/i18n/locales/en/translation.json
@@ -64,7 +64,7 @@
     "Federal taxes withheld": "Federal taxes withheld",
     "Fishing boat proceeds": "Fishing boat proceeds",
     "Medical and healthcare payments": "Medical and healthcare payments",
-    "Payer made direct sales totaling $5,000 or more of consumer products to recipient for resale": "Payer made direct sales totaling $5,000 or more of consumer products to recipient for resale",
+    "5000": "Payer made direct sales totaling $5,000 or more of consumer products to recipient for resale",
     "Substitute payments in lieu of dividends or interest": "Substitute payments in lieu of dividends or interest",
     "Crop insurance proceeds": "Crop insurance proceeds",
     "Gross proceeds paid to an attorney": "Gross proceeds paid to an attorney",
