--- a/src/main/react/src/i18n/locales/fr/translation.json
+++ b/src/main/react/src/i18n/locales/fr/translation.json
@@ -78,7 +78,7 @@
     "Federal taxes withheld": "Impôts fédéraux retenus",
     "Fishing boat proceeds": "Produit du bateau de pêche",
     "Medical and healthcare payments": "Paiements médicaux et de soins de santé",
-    "Payer made direct sales totaling $5,000 or more of consumer products to recipient for resale": "Le payeur a réalisé des ventes directes totalisant $5.000 ou plus de produits de consommation au destinataire pour la revente",
+    "5000": "Le payeur a réalisé des ventes directes totalisant $5.000 ou plus de produits de consommation au destinataire pour la revente",
     "Substitute payments in lieu of dividends or interest": "Paiements de substitution en remplacement de dividendes ou d'intérêts",
     "Crop insurance proceeds": "Produits de l'assurance récolte",
     "Gross proceeds paid to an attorney": "Produit brut versé à un avocat",
