--- a/src/main/react/src/i18n/locales/fr/translation.json
+++ b/src/main/react/src/i18n/locales/fr/translation.json
@@ -46,6 +46,12 @@
   "Calculations": "Calculs",
   "Personal information": "Informations personnelles",
   "of": "de",
+  "Save supplemental information": "Enregistrer les informations supplémentaires",
+  "Save all 1099 forms": "Enregistrez tous les 1099 formulaires",
+  "Add new 1099": "Ajouter un nouveau 1099",
+  "Save all W2 forms": "Enregistrez tous les W2 formulaires",
+  "Add new W2": "Ajouter un nouveau W2",
+  "Delete this form": "Supprimer ce formulaire",
   "W2": {
     "form": "Formulaire IRS W2",
     "Employer ID": "Numéro d'employeur",
