--- a/src/main/react/src/i18n/locales/fr/translation.json
+++ b/src/main/react/src/i18n/locales/fr/translation.json
@@ -53,6 +53,22 @@
   "Add new W2": "Ajouter un nouveau W2",
   "Delete this form": "Supprimer ce formulaire",
   "Employer information": "Renseignements sur l'employeur",
+  "W2 income": "Le revenu W2",
+  "1099 income": "Le revenu 1099",
+  "Supplemental income": "Revenu supplémentaire",
+  "Deductions": "Déductions",
+  "Taxable income": "Revenu imposable",
+  "Total taxable income": "Revenu total imposable",
+  "Taxed": "Taxé",
+  "Effective tax rate": "Taux d'imposition effectif",
+  "Withheld": "Retenu",
+  "W2 withheld": "W2 retenu",
+  "1099 withheld": "1099 retenu",
+  "Additional withheld": "Supplément retenu",
+  "Total withheld": "Total retenu",
+  "Taxes owed": "Impôts à payer",
+  "Tax return": "Déclaration d'impôt",
+  "Personal": "Personnel",
   "W2": {
     "form": "Formulaire IRS W2",
     "Employer ID": "Numéro d'employeur",
