--- a/src/main/react/src/i18n/locales/fr/translation.json
+++ b/src/main/react/src/i18n/locales/fr/translation.json
@@ -76,6 +76,7 @@
   "Submit many 1099 forms": "Soumettez de nombreux formulaires 1099",
   "Fill out some more information": "Remplissez quelques informations supplémentaires",
   "See how much you are expected to owe or be returned!": "Voyez combien vous êtes censé devoir ou être remboursé!",
+  "Delete": "Supprimer",
   "W2": {
     "form": "Formulaire IRS W2",
     "Employer ID": "Numéro d'employeur",
