--- a/src/main/react/src/i18n/locales/fr/translation.json
+++ b/src/main/react/src/i18n/locales/fr/translation.json
@@ -77,6 +77,8 @@
   "Fill out some more information": "Remplissez quelques informations supplémentaires",
   "See how much you are expected to owe or be returned!": "Voyez combien vous êtes censé devoir ou être remboursé!",
   "Delete": "Supprimer",
+  "Deleting...": "Suppression...",
+  "Terms and conditions": "Termes et conditions",
   "W2": {
     "form": "Formulaire IRS W2",
     "Employer ID": "Numéro d'employeur",
