--- a/src/main/react/src/i18n/locales/fr/translation.json
+++ b/src/main/react/src/i18n/locales/fr/translation.json
@@ -69,7 +69,7 @@
   "Taxes owed": "Impôts à payer",
   "Tax return": "Déclaration d'impôt",
   "Personal": "Personnel",
-  "Welcome to Clairvoyant Tax Prep! Please sign up and use our services to calculate your taxes!": "Bienvenue chez Clairvoyant Tax Prep! Inscrivez-vous et utilisez nos services pour calculer vos impôts !",
+  "Welcome to Clairvoyant Tax Prep! Please sign up and use our services to calculate your taxes!": "Bienvenue chez Clairvoyant Tax Prep! Inscrivez-vous et utilisez nos services pour calculer vos impôts!",
   "Start your taxes off right!": "Commencez bien vos impôts!",
   "Filing information": "Informations de dépôt",
   "Submit many W2 forms": "Soumettez de nombreux formulaires W2",
@@ -79,6 +79,11 @@
   "Delete": "Supprimer",
   "Deleting...": "Suppression...",
   "Terms and conditions": "Termes et conditions",
+  "Other information": "Les autres informations",
+  "Provide the necessary information from your W2's, 1099's, and any supplementary information if you have it. We'll do the rest!": "Fournissez les informations nécessaires à partir de vos W2, 1099 et toute information supplémentaire si vous en disposez. Nous ferons le reste!",
+  "Welcome to Clairvoyant Tax Prep!": "Bienvenue chez Clairvoyant Tax Prep!",
+  "Calculate taxes now": "Calculez les impôts maintenant",
+  "Additional information": "Informations Complémentaires",
   "W2": {
     "form": "Formulaire IRS W2",
     "Employer ID": "Numéro d'employeur",
