front end fixes

--- a/src/main/react/src/i18n/locales/fr/translation.json
+++ b/src/main/react/src/i18n/locales/fr/translation.json
@@ -84,6 +84,7 @@
   "Welcome to Clairvoyant Tax Prep!": "Bienvenue chez Clairvoyant Tax Prep!",
   "Calculate taxes now": "Calculez les impôts maintenant",
   "Additional information": "Informations Complémentaires",
+  "done": "dini",
   "W2": {
     "form": "Formulaire IRS W2",
     "Employer ID": "Numéro d'employeur",
